--- a/stylesheets/css-styling.css
+++ b/stylesheets/css-styling.css
@@ -6,9 +6,17 @@
   line-height: 140%;
 }
 
+/*
+  This styles the entire website to have 0 pixels of margin and a background colour of #dad7cd.
+*/
+body {
+  margin: 0px;
+  background-color: #dad7cd;
+}
+
 /* 
   This styles the header to have a position of sticky and a value of 0 for the top. This makes it so that the header 
-  and the contents in the header (restaurant name and nav bar) remain at the top of the user's browser as they scroll
+  and the contents in the header remain at the top of the user's browser as they scroll
   down the webpage. A value of 1 has been set for the z-index to make sure that the header stays on top of all other elements.
   This styles the header to have a background colour of #588157. As well as centering all text in the header.
 */
@@ -75,4 +83,41 @@ nav {
 */
 .nav-link li {
   display: inline-block;
+}
+
+/* 
+  This is an ID for styling David Attenborough's name in the header.
+  
+  It makes it an inline element. Adds 10 pixels of padding. Changes the font colour to #dad7cd.
+  It has a font size of 24 pixels. It is fully opaque.
+  
+  It uses the Didot font family, if that doesn't work then it uses the Palatino font family,
+  if that doesn't work then it uses the Lucida Bright font family, and finally it'll use the 
+  serif font as a last resort.
+  It uppercases the text. As well as having 3 pixels of letter spacing.
+  
+  A value of none has been applied to the text shadow and animation property to ensure there is no text shadow & animations 
+  for this element on the all pages.
+*/
+#name-styling {
+  display: inline-block;
+  position: relative;
+  left: -20%;
+
+  font-family: Didot, Palatino, "Lucida Bright", serif;
+  font-size: 24px;
+
+  text-transform: uppercase;
+
+  letter-spacing: 3px;
+
+  color: #dad7cd;
+  opacity: 1;
+
+  text-shadow: none;
+
+  -o-animation: none;
+  -moz-animation: none;
+  -webkit-animation: none;
+  animation: none;
 }
