--- a/stylesheets/css-styling.css
+++ b/stylesheets/css-styling.css
@@ -101,8 +101,7 @@ nav {
 */
 #name-styling {
   display: inline-block;
-  position: relative;
-  left: -20%;
+  padding: 0 50px 0 0;
 
   font-family: Didot, Palatino, "Lucida Bright", serif;
   font-size: 24px;
