--- a/stylesheets/css-styling.css
+++ b/stylesheets/css-styling.css
@@ -327,6 +327,28 @@ hr {
   display: inline-block;
 }
 
+/*
+  A class for styling quotes.
+*/
+.quote {
+  margin: 0;
+  background: #f0ece1;
+  padding: 16px;
+  margin: 16px;
+  border-radius: 16px;
+
+  color: #2d422c;
+  font-size: 20px;
+  font-style: italic;
+  font-family: Cambria, Baskerville, Garamond, "Times New Roman", serif;
+  word-spacing: 5px;
+}
+
+.quote figcaption,
+.quote blockquote {
+  margin: 16px;
+}
+
 /* 
   This is an ID for styling the name in the header.
   
