--- a/stylesheets/css-styling.css
+++ b/stylesheets/css-styling.css
@@ -26,7 +26,7 @@ main {
 
 /* 
   This styles the header to have a position of sticky and a value of 0 for the top. This makes it so that the header 
-  and the contents in the header (restaurant name and nav bar) remain at the top of the user's browser as they scroll
+  and the contents in the header remain at the top of the user's browser as they scroll
   down the webpage. A value of 1 has been set for the z-index to make sure that the header stays on top of all other elements.
 
   This styles the header to have a background colour of #588157. As well as centering all text in the header.
